-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
EL7 Server/SLES11 SP3 Client, Build# 3251
-
3
-
9223372036854775807
This issue was created by maloo for Saurabh Tandan <saurabh.tandan@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/c010ef0a-906d-11e5-a833-5254006e85c2.
The sub-test test_failover_mds failed with the following error:
/dev/lvm-Role_MDS/P1 failed to initialize!
Test log:
Update not seen after 90s: wanted '' got 'lustre:MDT0000' recovery-mds-scale test_failover_mds: @@@@@@ FAIL: /dev/lvm-Role_MDS/P1 failed to initialize!
Looks similar to TEI-3682
- duplicates
-
LU-8729 conf-sanity test_84: FAIL: /dev/mapper/mds1_flakey failed to initialize!
-
- Resolved
-
-
LU-7428 conf-sanity test_84, replay-dual 0a: /dev/lvm-Role_MDS/P1 failed to initialize!
-
- Resolved
-
- is related to
-
LU-9059 mount.lustre FATAL: unhandled/unloaded fs type 0 'ext3'
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...