LU-7481 utils: commit device label

After mounting Lustre successfully, the disk label should be
committed to disk, and it can't be guaranteed previously by
"sync" command. This patch adds a new lctl command to sync
dirty data to disk and used in mount_facet in t-f.

Change-Id: Ie7a78e28c3592f2b45e71613b3f64e53ba1430e4
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>